# TRICplus

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release.yml
bridges/: LICENSE
bridges/c/: check_bridge.c  tric.c  tric.h
bridges/cpp/: .clang-format  tric.hpp
bridges/javascript/: package.json  tsconfig.json
bridges/javascript/src/: client.ts  index.ts
bridges/javascript/tests/: bridge.test.ts
bridges/lua/: build.sh  tric.c
bridges/lua/tests/: bridge_test.lua
bridges/python/: pyproject.toml
bridges/python/src/tric/: __init__.py  client.py
bridges/python/tests/: test_bridge.py
release/benchmark/: benchmark-history.csv  run-benchmark.sh
release/manual/clients/: 00-overview.md
release/manual/clients/c/: 01-quickstart.md
release/manual/clients/javascript/: 01-quickstart.md
release/manual/clients/lua/: 01-quickstart.md
src/: lib.rs  main.rs  store.rs
src/core/: data_bus.rs  mod.rs  module.rs  permutive_bus.rs  sqlite_bus.rs
src/modules/: analyser.rs  auth.rs  benchmark.rs  cli.rs  codec.rs  export.rs  health.rs  import.rs  logger.rs  metrics.rs  mod.rs  placeholder.rs  query.rs  router.rs  server.rs
tests/: benchmark_test.rs  concurrency_test.rs  delete_value_if_match_test.rs  delete_value_test.rs  expiry_test.rs  find_by_prefix_test.rs  read_value_test.rs  server_integration_test.rs  write_ttl_test.rs  write_value_test.rs  write_value_with_ttl_test.rs
tric-server/: Cargo.toml
tric-server/src/: core.rs  data_bus.rs  main.rs  module.rs
(+1 files in other folders)
